Start connecting Yandex SMTP 2